# morphosymm-rl

./: .gitignore  .gitmodules  HOW_TO_USE.md  README.md  README_how_to.md  READNE_how_to.md  actor_critic_symm_equivariant_nn.py  actor_critic_symmetric.py  on_policy_runner_symm.py  ppo_augment.py  ppo_symm_data_augment.py  pyproject.toml  setup.py  symm_utils.py  test.py
example/: cli_args_utils.py  morphosymm_cfg.py  play_symm.py  rsl_rl_ppo_cfg.py  train_symm.py
morphosymm_rl/: __init__.py  ac_symm.py  actor_critic_symm_equivariant_nn.py  old_actor_critic_symm_equivariant_nn.py  on_policy_runner_symm.py  ppo_symm_data_augment.py  symm_actor_critic.py  symm_on_policy_runner.py  symm_utils.py
morphosymm_rl/algorithms/: __init__.py  ppo.py  ppo_symm_data_augment.py
morphosymm_rl/example/: cli_args.py  play_symm.py  rsl_rl_ppo_cfg.py  train_symm.py
morphosymm_rl/modules/: __init__.py  ac_moe.py  ac_moe_common.py  ac_moe_explicit.py  ac_moe_gated.py  normalizer.py
morphosymm_rl/runners/: __init__.py  symm_on_policy_runner.py
symmetry_aware_rsl_rl/: actor_critic_symm_equivariant_nn.py  on_policy_runner_symm.py  ppo_symm_data_augment.py
symmetry_aware_rsl_rl/example/: rsl_rl_ppo_cfg.py
